--- a/index.html
+++ b/index.html
@@ -58,22 +58,6 @@
 
             <!-- Any section element inside of this container is displayed as a slide -->
             <div class="slides">
-
-                <!--<section data-background-transition="slide"
-                         data-background="img/Compo.png">
-                    <h3></h3>
-                </section>
-                -->
-                <!--
-                <section data-background-transition="slide">
-                        <img
-                            src="img/CagouBot_avatar_big_no-circle.png"
-                            alt="Avatar Cagoubot"
-                            width="70%"
-                            style="background:none; border:none; box-shadow:none;">
-                </section>
-                -->
-
                 <section data-background-transition="slide">
                         <img
                             src="img/CagouBot_instagram.jpg"
@@ -87,7 +71,7 @@
                     <div class="containerdiv">
 
                         <img
-                            src="https://www.newcaledonia.travel/sites/default/files/2016-08/Plage_de_la_baie_des_citrons_noumea_nouvelle_caledonie_1920x540.jpeg"
+                            src="img/plage_citrons.jpeg"
                             alt="Photo de la Baie des Citrons"
                             width="100%">
 
@@ -105,7 +89,7 @@
                     <div class="containerdiv">
 
                         <img
-                            src="img/anse_vata_baie_noumea_1920x540_7.jpg"
+                            src="img/plage_vata.jpg"
                             alt="Photo de la Plage de l'Anse Vata"
                             width="100%">
 
@@ -122,7 +106,7 @@
                     <div class="containerdiv">
 
                         <img
-                            src="img/pierre-vernier.jpg"
+                            src="img/plage_pierre_vernier.jpg"
                             alt="Photo de Pierre Vernier"
                             width="80%">
 
@@ -140,7 +124,7 @@
                     <div class="containerdiv">
 
                         <img
-                            src="img/magenta.jpg"
+                            src="img/plage_magenta.jpg"
                             alt="Photo de la Plage de Magenta"
                             width="100%">
 
@@ -158,7 +142,7 @@
                     <div class="containerdiv">
 
                         <img
-                            src="img/kuendu.jpg"
+                            src="img/plage_kuendu.jpg"
                             alt="Photo du Kuendu Beach"
                             width="80%">
 
