--- a/index.html
+++ b/index.html
@@ -174,6 +174,9 @@
                         </a>
                     <p><i>Site officiel de la Ville de Nouméa</i></p>
                 </section>
+                
+                <section>
+                    <a class="twitter-timeline" data-height="600" data-theme="dark" href="https://twitter.com/BotCagou?ref_src=twsrc%5Etfw">Tweets by BotCagou</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> </section>
             </div>
 
         </div>  
