Ajout du num de slide.

--- a/index.html
+++ b/index.html
@@ -176,7 +176,8 @@
                 </section>
                 
                 <section>
-                    <a class="twitter-timeline" data-height="600" data-theme="dark" href="https://twitter.com/BotCagou?ref_src=twsrc%5Etfw">Tweets by BotCagou</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> </section>
+                    <a class="twitter-timeline" data-height="600" data-theme="dark" href="https://twitter.com/BotCagou?ref_src=twsrc%5Etfw">Tweets by BotCagou</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+                </section>
             </div>
 
         </div>  
@@ -194,7 +195,7 @@
             progress: true,
             history: true,
             center: true,
-
+            slideNumber: 'c/t',
             transition: 'slide', // none/fade/slide/convex/concave/zoom
 
             // allotted time for presentation
