--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                     <div class="containerdiv">
                         
                     <iframe width="660" height="415"
-                            src="https://www.youtube.com/embed/2u4CwVllO_w?controls=0&autoplay=1"
+                            src="https://www.youtube.com/embed/2u4CwVllO_w?controls=0&autoplay=1&mute=1"
                             frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen></iframe>
                     
