Mute all videos

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 </section>
                 
                 <!-- Live de l'Anse Vate -->
-                <section data-background-iframe="https://www.youtube.com/embed/yF9mFfto568?controls=0&autoplay=1">
+                <section data-background-iframe="https://www.youtube.com/embed/yF9mFfto568?controls=0&autoplay=1&mute=1">
                     <img src="https://eaux-baignade-noumea.herokuapp.com/plages/2/badge.svg"
                              alt="Badge qualité des eaux de l'Anse Vata">
                     
