--- a/index.html
+++ b/index.html
@@ -195,6 +195,14 @@
                     <img src="https://eaux-baignade-noumea.herokuapp.com/plages/5/badge.svg"
                              alt="Badge qualité des eaux de la Baie des Citrons">
                 </section>
+                
+                
+                <section data-background="img/citrons_vectorized_dark.png">
+                    <img src="img/qr-code_botcagou.png" 
+                             alt="Qr Code de Cagoubot"
+                             width="40%"
+                            style="background:none; border:none; box-shadow:none;">
+                </section>
             </div>
 
         </div>  
